# aosc-alice

./: .gitignore  Jenkinsfile  README.md  create-vm-image.sh  refresh-system.sh  update-tarball.sh
aosc-test-helper/: Cargo.toml
aosc-test-helper/src/: main.rs  vm.rs
aosc-test-helper/templates/: vm-efi.xml.stpl
servant/: aosc-alice-servant.service  install.sh
